@@ -2,7 +2,6 @@ package defualt.databaseproject;
 
 import ActiveRecordPattern.*;
 
-import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.control.*;
 
@@ -10,6 +9,9 @@ import java.util.AbstractMap.*;
 import java.util.ArrayList;
 
 public class LogInController {
+
+    private int userId = -1;
+    private String userRole;
 
     @FXML
     private TextField userNameTextField;
@@ -20,17 +22,14 @@ public class LogInController {
     @FXML
     private Label wrongUsernameOrPassword;
 
-    private int userId = -1;
-    private String userRole;
-
     @FXML
-    public void handleButtonClick(ActionEvent actionEvent) {
+    public void handleButtonClick() {
 
         String userName = userNameTextField.getText();
         String password = passwordTextField.getText();
-        ArrayList<SimpleEntry<String, String>> criterias = new ArrayList<>();
-        criterias.add(new SimpleEntry<>("name", userName));
-        ArrayList<Users> userList = Users.find(criterias);
+        ArrayList<SimpleEntry<String, String>> criteria = new ArrayList<>();
+        criteria.add(new SimpleEntry<>("name", userName));
+        ArrayList<Users> userList = Users.find(criteria);
         userList.forEach(user -> {
             if (user.getName().equals(userName) && user.getPassword().equals(password)) {
                 userId = user.getId();
@@ -38,7 +37,6 @@ public class LogInController {
             }
         });
         if (userId == -1) {
-            System.out.println("Username or password are not correct");
             wrongUsernameOrPassword.setText("Username or password are not correct");
 
         } else {
@@ -46,7 +44,7 @@ public class LogInController {
             wrongUsernameOrPassword.setText("");
             if (userRole.equals("admin")) {
 
-                AdminSiteController.setUser(userList.get(0));
+                AdminSiteController.setUser(userList.getFirst());
                 StageManager.switchScene("admin.fxml");
             } else {
                 StageManager.switchScene("dash.fxml");
